[metadata]
name = lmtools
author = zyx
description = LM analysis
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 1 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = lmtools
install_requires =
    zarr==2.18.2
python_requires >= 3.7
package_dir =
    = lmtools

[options.packages.find]
where = lmtools

[options.entry_points]
console_scripts =
    lmtools = lmtools.__main__:main

[options.extras_require]
dev = flake8

[options.package_data]
segprocess = py.typed

[flake8]
max-line-length = 88
