[metadata]
name = lmtools
author = zyx
description = LM analysis
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 1 - Alpha
    Framework :: napari
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    numpy
    zarr==2.18.2
    nd2
    napari
    napari-plugin-engine
    magicgui
    opencv-python
    pillow
    scipy
    pandas
    pyyaml
    scikit-image
    scikit-learn
    matplotlib
    tifffile
python_requires = >=3.7

[options.extras_require]
cellpose = 
    cellpose
    torch
dev = 
    flake8
    pytest
    mypy

[options.entry_points]
console_scripts =
    lmtools = lmtools.__main__:main
napari.manifest =
    lmtools = lmtools.napari_plugin:napari.yaml

[flake8]
max-line-length = 88